Version 2.0
--------------
2011-09-20 erra <erra@ya.ru>
	* common/support.c, common/support_ext.h: cstrip() added for
			stripping colors from spam messages before checking
	* ircd/channel.c: check_spam call added to m_part()
	* ircd/s_debug.c: STRIP_COLORS is shown as 'b' in server_opts
	* ircd/s_err.c: RPL_STATSTRIGGER fixed
	* ircd/s_misc.c: check_spam() call added to exit_one_client
	* ircd/s_serv.c: /stats T output fixed
	* ircd/s_user.c: check_spam() created to be called from m_message
			as well as m_part and exit_one_client
	* support/config.h.dist: STRIP_COLORS added, defined by default

2011-09-20 erra <erra@ya.ru>
	* ircd/s_serv.c: m_trigger/m_untrigger fixed for optional class

2011-09-18 erra <erra@ya.ru>
	* common/match.c: bzero used instead of {0} assignment for mbs
	* ircd/s_user.c: condition fixed in check_triggers
	* ircd/s_serv.c: condition fixed in match_trigger

2011-09-15 erra <erra@ya.ru>
	* ircd/s_serv.c: m_trigger/m_untrigger for T:lines, /stats T
	* iserv/iserv.c: T:lines processing introduced

2011-09-14 erra <erra@ya.ru>
	* */*: #ifdef RUSNET_RLINES removed (now mandatory)
	* common/numeric_def.h, common/struct_def.h, ircd/s_err.c,
		ircd/s_user.c: usermode +c (colorless) added
	* ircd/channel.c: discard mode +R for older servers; restore mode
			assignment (affected modes with args)

2011-09-13 erra <erra@ya.ru>
	* common/send.c: colorless code cancelled (erroneous)
	* ircd/channel.c: discard colorful PART message for colorless channels
	* ircd/s_user.c: whois opnotice fixed

2011-09-12 erra <erra@ya.ru>
	* common/collsyms.h, common/match.c, common/sm_loop.c: GNU bash wchar
			matching code imported
	* support/Makefile.in: match.o dependencies updated

2011-09-11 erra <erra@ya.ru>
	* common/conversion.c: ICONV_CHAR definition adjusted for FreeBSD
	* common/os.h: #include <wctype.h> for FreeBSD
	* ircd/ircd.c: ttyname usage refined (code clearance)
	* ircd/res_init.c: redefinition of _D_UNUSED_ cancelled (code clearance)